Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,87 @@
     */
     const newsData = [
   {
+    "title": "Giá cá tra giống tăng 'nóng'",
+    "content": "Giá cá tra giống tại Việt Nam đã tăng mạnh, hiện đạt từ 55.000 - 57.000 đồng/kg, gấp đôi so với năm trước. Nguyên nhân của sự tăng giá này là do nhu cầu nuôi cá tăng cao, trong khi nguồn cung không đủ đáp ứng, do nhiều người nuôi đã ngừng sản xuất cá giống. Các chuyên gia cho biết, chất lượng cá giống đang suy giảm và tỷ lệ hao hụt trong quá trình nuôi rất cao, điều này cũng góp phần vào việc tăng giá cá giống.",
+    "link": "https://tuoitre.vn/gia-ca-tra-giong-tang-nong-20250319232238352.htm",
+    "cat": "kinh-doanh",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Tại sao giá cá tra giống tăng mạnh gần đây?",
+    "answers": [
+      {
+        "text": "Do nhu cầu nuôi cá tăng cao và nguồn cung không đủ.",
+        "correct": true
+      },
+      {
+        "text": "Vì cá tra giống bị bệnh nhiều.",
+        "correct": false
+      },
+      {
+        "text": "Do chính phủ tăng thuế xuất khẩu cá tra.",
+        "correct": false
+      },
+      {
+        "text": "Vì các cơ sở sản xuất cá giống tăng giá.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Vợ Ronaldo Nazario lên án bóng đá Brazil",
+    "content": "Celina Locks, vợ của huyền thoại bóng đá Ronaldo Nazario, đã chỉ trích Liên đoàn Bóng đá Brazil sau khi chồng cô rút lui khỏi cuộc đua chức Chủ tịch. Cô cho rằng Brazil là một quốc gia đáng thất vọng với tình trạng tham nhũng vẫn tiếp diễn. Ronaldo Nazario đã tuyên bố tham gia cuộc bầu cử nhưng cuối cùng không nhận được sự ủng hộ từ các liên đoàn bóng đá địa phương, dẫn đến việc rút lui.",
+    "link": "https://vnexpress.net/vo-ronaldo-nazario-len-an-bong-da-brazil-4863507.html",
+    "cat": "the-thao",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao vợ Ronaldo Nazario chỉ trích bóng đá Brazil?",
+    "answers": [
+      {
+        "text": "Vì chồng cô rút khỏi cuộc đua chức Chủ tịch và cô cho rằng có tham nhũng.",
+        "correct": true
+      },
+      {
+        "text": "Vì đội tuyển Brazil không giành được World Cup trong nhiều năm.",
+        "correct": false
+      },
+      {
+        "text": "Vì Ronaldo không được mọi người ủng hộ trong cuộc bầu cử.",
+        "correct": false
+      },
+      {
+        "text": "Vì cô không thích cách tổ chức các giải đấu ở Brazil.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Ramos đối mặt án phạt kỷ lục ở Mexico",
+    "content": "Trung vệ Sergio Ramos đang đối mặt với án phạt cấm thi đấu lên tới 15 trận ở Mexico sau khi có hành vi đá vào mông đối thủ trong trận đấu giữa Monterrey và Unam. Pha phạm lỗi này diễn ra vào cuối trận, khiến Ramos nhận thẻ đỏ. Ủy ban kỷ luật Liên đoàn bóng đá Mexico đang xem xét xử lý hành vi bạo lực của anh, trong khi HLV của Unam phê phán sự thiên vị đối với cầu thủ nước ngoài trong giải đấu.",
+    "link": "https://vnexpress.net/ramos-doi-mat-an-phat-ky-luc-o-mexico-4863515.html",
+    "cat": "the-thao",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Ramos đã nhận án phạt nào ở Mexico?",
+    "answers": [
+      {
+        "text": "Cấm thi đấu 15 trận",
+        "correct": true
+      },
+      {
+        "text": "Cấm thi đấu 5 trận",
+        "correct": false
+      },
+      {
+        "text": "Không bị phạt",
+        "correct": false
+      },
+      {
+        "text": "Cấm thi đấu 10 trận",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hậu \"Pháo\" và những cuộc thao túng lãnh đạo tỉnh",
     "content": "Nguyễn Văn Hậu, chủ tịch Tập đoàn Phúc Sơn, đã thao túng lãnh đạo tỉnh thông qua việc hối lộ, dẫn đến việc truy tố năm cựu bí thư tỉnh ủy. Ông Hậu bị đề nghị truy tố vì nhiều tội danh liên quan đến tham nhũng và vi phạm quy định về đấu thầu. Các gói thầu lớn mà Hậu thâu tóm đều có sự ưu ái từ các lãnh đạo tỉnh, và ông đã chi hàng trăm tỷ đồng để hưởng lợi bất chính. Vụ án này phản ánh tình trạng móc ngoặc giữa nhà thầu và các cơ quan chức năng trong lĩnh vực xây dựng.",
     "link": "https://tuoitre.vn/hau-phao-va-nhung-cuoc-thao-tung-lanh-dao-tinh-2025032008120801.htm",
@@ -2419,33 +2500,6 @@
     ]
   },
   {
-    "title": "GAC tung ưu đãi ba dòng xe trong tháng 3",
-    "content": "GAC Motor Việt Nam vừa công bố chương trình ưu đãi cho ba dòng xe gồm M6 Pro, M8 và GS8 trong tháng 3. Khách hàng mua M6 Pro sẽ nhận 7 năm bảo hành, miễn phí dịch vụ cứu hộ 24/7 và thêm đồng hồ thông minh cho phiên bản 1.5T GL. M8 cũng có các ưu đãi tương tự, với quà tặng tiền mặt cho bản GL Master, trong khi GS8 được miễn lệ phí trước bạ và hưởng chính sách bảo hành như trên.",
-    "link": "https://vnexpress.net/gac-tung-uu-dai-ba-dong-xe-trong-thang-3-4863400.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "GAC Motor có những ưu đãi gì cho ba dòng xe trong tháng 3?",
-    "answers": [
-      {
-        "text": "Chương trình ưu đãi cho M6 Pro, M8 và GS8 với bảo hành 7 năm.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ có ưu đãi cho dòng xe M6 Pro.",
-        "correct": false
-      },
-      {
-        "text": "Chương trình khuyến mãi chỉ áp dụng cho xe GS8.",
-        "correct": false
-      },
-      {
-        "text": "Không có thông tin nào về ưu đãi cho xe GAC.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "\"Mỹ nam không tuổi\" Lee Jun Ki phản hồi thông tin trốn thuế",
     "content": "Ngày 19/3, Lee Jun Ki phản hồi thông tin bị Cục thuế Quốc gia Hàn Quốc truy thu 900 triệu won (15,8 tỷ đồng) vì nghi vấn trốn thuế. Nam diễn viên khẳng định đã kê khai thu nhập minh bạch và nộp đơn khiếu nại, đồng thời cho biết đã thanh toán toàn bộ số tiền truy thu. Lee Jun Ki cho rằng quyết định của cơ quan thuế không đúng với thông lệ và đã thực hiện nghĩa vụ thuế theo tư vấn từ chuyên gia. Ngoài ra, tài sản bất động sản của anh cũng được chú ý trong bối cảnh này.",
     "link": "https://dantri.com.vn/giai-tri/my-nam-khong-tuoi-lee-jun-ki-phan-hoi-thong-tin-tron-thue-20250319123742102.htm",
@@ -2468,6 +2522,33 @@
       },
       {
         "text": "Anh không quan tâm đến thông tin này và tiếp tục sự nghiệp.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "GAC tung ưu đãi ba dòng xe trong tháng 3",
+    "content": "GAC Motor Việt Nam vừa công bố chương trình ưu đãi cho ba dòng xe gồm M6 Pro, M8 và GS8 trong tháng 3. Khách hàng mua M6 Pro sẽ nhận 7 năm bảo hành, miễn phí dịch vụ cứu hộ 24/7 và thêm đồng hồ thông minh cho phiên bản 1.5T GL. M8 cũng có các ưu đãi tương tự, với quà tặng tiền mặt cho bản GL Master, trong khi GS8 được miễn lệ phí trước bạ và hưởng chính sách bảo hành như trên.",
+    "link": "https://vnexpress.net/gac-tung-uu-dai-ba-dong-xe-trong-thang-3-4863400.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "GAC Motor có những ưu đãi gì cho ba dòng xe trong tháng 3?",
+    "answers": [
+      {
+        "text": "Chương trình ưu đãi cho M6 Pro, M8 và GS8 với bảo hành 7 năm.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ có ưu đãi cho dòng xe M6 Pro.",
+        "correct": false
+      },
+      {
+        "text": "Chương trình khuyến mãi chỉ áp dụng cho xe GS8.",
+        "correct": false
+      },
+      {
+        "text": "Không có thông tin nào về ưu đãi cho xe GAC.",
         "correct": false
       }
     ]
@@ -2906,33 +2987,6 @@
     ]
   },
   {
-    "title": "5 món ăn thường xuyên có thể phòng bệnh tim",
-    "content": "Bài viết đề cập đến 5 món ăn có thể giúp phòng ngừa bệnh tim, bao gồm dầu ôliu, chocolate đen, cà chua, hạt và tỏi. Dầu ôliu chứa chất béo không bão hòa đơn và polyphenol có tác dụng giảm viêm và cholesterol. Chocolate đen với hàm lượng ca cao cao có flavonoid giúp cải thiện lưu lượng máu và giảm huyết áp. Các loại hạt và cà chua cũng giàu chất dinh dưỡng hỗ trợ sức khỏe tim mạch. Tỏi với allicin có khả năng bảo vệ tim và ngăn ngừa cục máu đông.",
-    "link": "https://vnexpress.net/5-mon-an-thuong-xuyen-co-the-phong-benh-tim-4863283.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những món ăn nào có thể giúp phòng ngừa bệnh tim?",
-    "answers": [
-      {
-        "text": "Dầu ôliu, chocolate đen, cà chua, hạt, tỏi",
-        "correct": true
-      },
-      {
-        "text": "Thịt đỏ, thực phẩm chiên, bánh ngọt, đồ uống có ga",
-        "correct": false
-      },
-      {
-        "text": "Cá hồi, rau xanh, sữa chua, nước trái cây",
-        "correct": false
-      },
-      {
-        "text": "Mì gói, snack, kem, đồ ăn nhanh",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "42 tuổi mới phát hiện có hai tử cung",
     "content": "Chị Hạnh, 42 tuổi, đã phát hiện mình có hai tử cung và hai âm đạo sau khi đi khám do chu kỳ kinh kéo dài 14 ngày. Tình trạng này khá hiếm gặp, chỉ chiếm 5% các dị tật tử cung và thường không được phát hiện nếu không có kiểm tra y tế. Sau khi phát hiện, bác sĩ đã phẫu thuật cắt bỏ một tử cung chứa khối u xơ lớn để cải thiện sức khỏe cho chị. Mặc dù có hai tử cung, chị Hạnh vẫn có khả năng mang thai và có kinh nguyệt bình thường.",
     "link": "https://vnexpress.net/42-tuoi-moi-phat-hien-co-hai-tu-cung-4862862.html",
@@ -2959,6 +3013,33 @@
       },
       {
         "text": "Có dấu hiệu mang thai",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "5 món ăn thường xuyên có thể phòng bệnh tim",
+    "content": "Bài viết đề cập đến 5 món ăn có thể giúp phòng ngừa bệnh tim, bao gồm dầu ôliu, chocolate đen, cà chua, hạt và tỏi. Dầu ôliu chứa chất béo không bão hòa đơn và polyphenol có tác dụng giảm viêm và cholesterol. Chocolate đen với hàm lượng ca cao cao có flavonoid giúp cải thiện lưu lượng máu và giảm huyết áp. Các loại hạt và cà chua cũng giàu chất dinh dưỡng hỗ trợ sức khỏe tim mạch. Tỏi với allicin có khả năng bảo vệ tim và ngăn ngừa cục máu đông.",
+    "link": "https://vnexpress.net/5-mon-an-thuong-xuyen-co-the-phong-benh-tim-4863283.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những món ăn nào có thể giúp phòng ngừa bệnh tim?",
+    "answers": [
+      {
+        "text": "Dầu ôliu, chocolate đen, cà chua, hạt, tỏi",
+        "correct": true
+      },
+      {
+        "text": "Thịt đỏ, thực phẩm chiên, bánh ngọt, đồ uống có ga",
+        "correct": false
+      },
+      {
+        "text": "Cá hồi, rau xanh, sữa chua, nước trái cây",
+        "correct": false
+      },
+      {
+        "text": "Mì gói, snack, kem, đồ ăn nhanh",
         "correct": false
       }
     ]
@@ -4750,6 +4831,37 @@
     ]
   },
   {
+    "title": "Trẻ rụng tóc do thiếu chất gì?",
+    "content": "Trẻ bị rụng tóc có thể do thiếu hụt nhiều loại vitamin và khoáng chất thiết yếu như vitamin B, C, D, sắt, kẽm và selen trong chế độ dinh dưỡng hàng ngày. Thiếu dinh dưỡng có thể dẫn đến tình trạng tóc rụng nhiều hơn 100 sợi mỗi ngày, tóc yếu và dễ gãy. Bác sĩ Trần Thị Trà Phương đã nhấn mạnh tầm quan trọng của việc bổ sung các chất dinh dưỡng này để giúp tóc phát triển khỏe mạnh và ngăn ngừa rụng tóc ở trẻ em.",
+    "link": "https://vnexpress.net/tre-rung-toc-do-thieu-chat-gi-4862999.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Trẻ rụng tóc do thiếu chất gì?",
+    "answers": [
+      {
+        "text": "Vitamin B, C, D và khoáng chất như sắt, kẽm",
+        "correct": true
+      },
+      {
+        "text": "Chất béo omega-3",
+        "correct": false
+      },
+      {
+        "text": "Vitamin A và E",
+        "correct": false
+      },
+      {
+        "text": "Chất xơ và protein",
+        "correct": false
+      },
+      {
+        "text": "Vitamin D và magie",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Cô gái mắc chứng 'xương hóa đá'",
     "content": "Cô gái 28 tuổi ở Bắc Giang mắc bệnh xương hóa đá, một bệnh lý di truyền hiếm gặp, gây đau khớp và khó khăn trong vận động. Cô đã trải qua phẫu thuật thay khớp háng nhân tạo do tình trạng bệnh nghiêm trọng, khiến xương trở nên cứng nhưng lại rất giòn. Ca phẫu thuật kéo dài 5 giờ đã thành công, giúp cô thoát khỏi cơn đau và có thể đi lại bình thường.",
     "link": "https://vnexpress.net/co-gai-mac-chung-xuong-hoa-da-4863071.html",
@@ -4799,37 +4911,6 @@
       },
       {
         "text": "Bé bị va chạm với đồ vật trong nhà.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Trẻ rụng tóc do thiếu chất gì?",
-    "content": "Trẻ bị rụng tóc có thể do thiếu hụt nhiều loại vitamin và khoáng chất thiết yếu như vitamin B, C, D, sắt, kẽm và selen trong chế độ dinh dưỡng hàng ngày. Thiếu dinh dưỡng có thể dẫn đến tình trạng tóc rụng nhiều hơn 100 sợi mỗi ngày, tóc yếu và dễ gãy. Bác sĩ Trần Thị Trà Phương đã nhấn mạnh tầm quan trọng của việc bổ sung các chất dinh dưỡng này để giúp tóc phát triển khỏe mạnh và ngăn ngừa rụng tóc ở trẻ em.",
-    "link": "https://vnexpress.net/tre-rung-toc-do-thieu-chat-gi-4862999.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Trẻ rụng tóc do thiếu chất gì?",
-    "answers": [
-      {
-        "text": "Vitamin B, C, D và khoáng chất như sắt, kẽm",
-        "correct": true
-      },
-      {
-        "text": "Chất béo omega-3",
-        "correct": false
-      },
-      {
-        "text": "Vitamin A và E",
-        "correct": false
-      },
-      {
-        "text": "Chất xơ và protein",
-        "correct": false
-      },
-      {
-        "text": "Vitamin D và magie",
         "correct": false
       }
     ]
@@ -4969,33 +5050,6 @@
       },
       {
         "text": "Chỉ sống",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Thẩm phán Mỹ ngăn đóng cửa USAID",
-    "content": "Một thẩm phán liên bang tại Mỹ đã ra phán quyết ngăn tỷ phú Elon Musk và Ban Hiệu suất Chính phủ (DOGE) thực hiện các bước nhằm đóng cửa Cơ quan Phát triển Quốc tế Mỹ (USAID). Theo phán quyết, các nhân viên của USAID, bao gồm những người đã bị cho nghỉ phép, phải được khôi phục quyền truy cập vào hệ thống của cơ quan này. Tổng thống Trump đã tuyên bố sẽ kháng cáo quyết định này, trong bối cảnh USAID đang đối mặt với nguy cơ bị đóng cửa và cắt giảm nhân sự lớn.",
-    "link": "https://dantri.com.vn/the-gioi/tham-phan-my-ngan-dong-cua-usaid-20250319084402957.htm",
-    "cat": "phap-luat",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Tại sao thẩm phán Mỹ đã ngăn việc đóng cửa USAID?",
-    "answers": [
-      {
-        "text": "Vì phán quyết cho rằng hành động đó có thể vi hiến.",
-        "correct": true
-      },
-      {
-        "text": "Do sự phản đối của Tổng thống Trump.",
-        "correct": false
-      },
-      {
-        "text": "Vì USAID đã không hoạt động hiệu quả.",
-        "correct": false
-      },
-      {
-        "text": "Do các nhân viên USAID yêu cầu giữ lại việc làm.",
         "correct": false
       }
     ]
