Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -162,6 +162,33 @@
     ]
   },
   {
+    "title": "Tranh cãi 'có nhất thiết phải trao vàng trong lễ cưới'",
+    "content": "Bài viết bàn về sự tranh cãi xung quanh việc có nên trao vàng trong lễ cưới hay không. Một bên cho rằng việc trao vàng là phong tục truyền thống, thể hiện sự trân trọng và chúc phúc cho cô dâu, trong khi bên kia lại cho rằng việc này không cần thiết và có thể gây áp lực tài chính cho các cặp đôi. Hai quan điểm này được thể hiện qua câu chuyện của anh Trần Trọng Thành và chị Nguyễn Thị Dung, cùng với ý kiến của nhiều người khác về việc có nên giữ phong tục này trong bối cảnh kinh tế khó khăn hiện nay.",
+    "link": "https://vnexpress.net/tranh-cai-co-nhat-thiet-phai-trao-vang-trong-le-cuoi-4863490.html",
+    "cat": "gia-dinh",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Việc trao vàng trong lễ cưới có thật sự cần thiết không?",
+    "answers": [
+      {
+        "text": "Có, vì đó là phong tục truyền thống.",
+        "correct": true
+      },
+      {
+        "text": "Không, nó không quan trọng.",
+        "correct": false
+      },
+      {
+        "text": "Có, vì vàng sẽ mang lại sự giàu có.",
+        "correct": false
+      },
+      {
+        "text": "Không, chỉ cần mời khách là đủ.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hậu \"Pháo\" và những cuộc thao túng lãnh đạo tỉnh",
     "content": "Nguyễn Văn Hậu, chủ tịch Tập đoàn Phúc Sơn, đã thao túng lãnh đạo tỉnh thông qua việc hối lộ, dẫn đến việc truy tố năm cựu bí thư tỉnh ủy. Ông Hậu bị đề nghị truy tố vì nhiều tội danh liên quan đến tham nhũng và vi phạm quy định về đấu thầu. Các gói thầu lớn mà Hậu thâu tóm đều có sự ưu ái từ các lãnh đạo tỉnh, và ông đã chi hàng trăm tỷ đồng để hưởng lợi bất chính. Vụ án này phản ánh tình trạng móc ngoặc giữa nhà thầu và các cơ quan chức năng trong lĩnh vực xây dựng.",
     "link": "https://tuoitre.vn/hau-phao-va-nhung-cuoc-thao-tung-lanh-dao-tinh-2025032008120801.htm",
@@ -2110,33 +2137,6 @@
     ]
   },
   {
-    "title": "\"Mỹ nam không tuổi\" Lee Jun Ki phản hồi thông tin trốn thuế",
-    "content": "Ngày 19/3, Lee Jun Ki phản hồi thông tin bị Cục thuế Quốc gia Hàn Quốc truy thu 900 triệu won (15,8 tỷ đồng) vì nghi vấn trốn thuế. Nam diễn viên khẳng định đã kê khai thu nhập minh bạch và nộp đơn khiếu nại, đồng thời cho biết đã thanh toán toàn bộ số tiền truy thu. Lee Jun Ki cho rằng quyết định của cơ quan thuế không đúng với thông lệ và đã thực hiện nghĩa vụ thuế theo tư vấn từ chuyên gia. Ngoài ra, tài sản bất động sản của anh cũng được chú ý trong bối cảnh này.",
-    "link": "https://dantri.com.vn/giai-tri/my-nam-khong-tuoi-lee-jun-ki-phan-hoi-thong-tin-tron-thue-20250319123742102.htm",
-    "cat": "giai-tri",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Lee Jun Ki phản hồi như thế nào về thông tin trốn thuế?",
-    "answers": [
-      {
-        "text": "Anh đã nộp toàn bộ số tiền truy thu và khiếu nại quyết định của cơ quan thuế.",
-        "correct": true
-      },
-      {
-        "text": "Anh phủ nhận toàn bộ thông tin và không có bất kỳ phản hồi nào.",
-        "correct": false
-      },
-      {
-        "text": "Anh thừa nhận đã trốn thuế và chấp nhận hình phạt.",
-        "correct": false
-      },
-      {
-        "text": "Anh không quan tâm đến thông tin này và tiếp tục sự nghiệp.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "GAC tung ưu đãi ba dòng xe trong tháng 3",
     "content": "GAC Motor Việt Nam vừa công bố chương trình ưu đãi cho ba dòng xe gồm M6 Pro, M8 và GS8 trong tháng 3. Khách hàng mua M6 Pro sẽ nhận 7 năm bảo hành, miễn phí dịch vụ cứu hộ 24/7 và thêm đồng hồ thông minh cho phiên bản 1.5T GL. M8 cũng có các ưu đãi tương tự, với quà tặng tiền mặt cho bản GL Master, trong khi GS8 được miễn lệ phí trước bạ và hưởng chính sách bảo hành như trên.",
     "link": "https://vnexpress.net/gac-tung-uu-dai-ba-dong-xe-trong-thang-3-4863400.html",
@@ -2248,6 +2248,33 @@
       },
       {
         "text": "Đau bụng và khó tiêu",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "\"Mỹ nam không tuổi\" Lee Jun Ki phản hồi thông tin trốn thuế",
+    "content": "Ngày 19/3, Lee Jun Ki phản hồi thông tin bị Cục thuế Quốc gia Hàn Quốc truy thu 900 triệu won (15,8 tỷ đồng) vì nghi vấn trốn thuế. Nam diễn viên khẳng định đã kê khai thu nhập minh bạch và nộp đơn khiếu nại, đồng thời cho biết đã thanh toán toàn bộ số tiền truy thu. Lee Jun Ki cho rằng quyết định của cơ quan thuế không đúng với thông lệ và đã thực hiện nghĩa vụ thuế theo tư vấn từ chuyên gia. Ngoài ra, tài sản bất động sản của anh cũng được chú ý trong bối cảnh này.",
+    "link": "https://dantri.com.vn/giai-tri/my-nam-khong-tuoi-lee-jun-ki-phan-hoi-thong-tin-tron-thue-20250319123742102.htm",
+    "cat": "giai-tri",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Lee Jun Ki phản hồi như thế nào về thông tin trốn thuế?",
+    "answers": [
+      {
+        "text": "Anh đã nộp toàn bộ số tiền truy thu và khiếu nại quyết định của cơ quan thuế.",
+        "correct": true
+      },
+      {
+        "text": "Anh phủ nhận toàn bộ thông tin và không có bất kỳ phản hồi nào.",
+        "correct": false
+      },
+      {
+        "text": "Anh thừa nhận đã trốn thuế và chấp nhận hình phạt.",
+        "correct": false
+      },
+      {
+        "text": "Anh không quan tâm đến thông tin này và tiếp tục sự nghiệp.",
         "correct": false
       }
     ]
@@ -4441,37 +4468,6 @@
     ]
   },
   {
-    "title": "Trẻ rụng tóc do thiếu chất gì?",
-    "content": "Trẻ bị rụng tóc có thể do thiếu hụt nhiều loại vitamin và khoáng chất thiết yếu như vitamin B, C, D, sắt, kẽm và selen trong chế độ dinh dưỡng hàng ngày. Thiếu dinh dưỡng có thể dẫn đến tình trạng tóc rụng nhiều hơn 100 sợi mỗi ngày, tóc yếu và dễ gãy. Bác sĩ Trần Thị Trà Phương đã nhấn mạnh tầm quan trọng của việc bổ sung các chất dinh dưỡng này để giúp tóc phát triển khỏe mạnh và ngăn ngừa rụng tóc ở trẻ em.",
-    "link": "https://vnexpress.net/tre-rung-toc-do-thieu-chat-gi-4862999.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Trẻ rụng tóc do thiếu chất gì?",
-    "answers": [
-      {
-        "text": "Vitamin B, C, D và khoáng chất như sắt, kẽm",
-        "correct": true
-      },
-      {
-        "text": "Chất béo omega-3",
-        "correct": false
-      },
-      {
-        "text": "Vitamin A và E",
-        "correct": false
-      },
-      {
-        "text": "Chất xơ và protein",
-        "correct": false
-      },
-      {
-        "text": "Vitamin D và magie",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Cô gái mắc chứng 'xương hóa đá'",
     "content": "Cô gái 28 tuổi ở Bắc Giang mắc bệnh xương hóa đá, một bệnh lý di truyền hiếm gặp, gây đau khớp và khó khăn trong vận động. Cô đã trải qua phẫu thuật thay khớp háng nhân tạo do tình trạng bệnh nghiêm trọng, khiến xương trở nên cứng nhưng lại rất giòn. Ca phẫu thuật kéo dài 5 giờ đã thành công, giúp cô thoát khỏi cơn đau và có thể đi lại bình thường.",
     "link": "https://vnexpress.net/co-gai-mac-chung-xuong-hoa-da-4863071.html",
@@ -4521,6 +4517,37 @@
       },
       {
         "text": "Bé bị va chạm với đồ vật trong nhà.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Trẻ rụng tóc do thiếu chất gì?",
+    "content": "Trẻ bị rụng tóc có thể do thiếu hụt nhiều loại vitamin và khoáng chất thiết yếu như vitamin B, C, D, sắt, kẽm và selen trong chế độ dinh dưỡng hàng ngày. Thiếu dinh dưỡng có thể dẫn đến tình trạng tóc rụng nhiều hơn 100 sợi mỗi ngày, tóc yếu và dễ gãy. Bác sĩ Trần Thị Trà Phương đã nhấn mạnh tầm quan trọng của việc bổ sung các chất dinh dưỡng này để giúp tóc phát triển khỏe mạnh và ngăn ngừa rụng tóc ở trẻ em.",
+    "link": "https://vnexpress.net/tre-rung-toc-do-thieu-chat-gi-4862999.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Trẻ rụng tóc do thiếu chất gì?",
+    "answers": [
+      {
+        "text": "Vitamin B, C, D và khoáng chất như sắt, kẽm",
+        "correct": true
+      },
+      {
+        "text": "Chất béo omega-3",
+        "correct": false
+      },
+      {
+        "text": "Vitamin A và E",
+        "correct": false
+      },
+      {
+        "text": "Chất xơ và protein",
+        "correct": false
+      },
+      {
+        "text": "Vitamin D và magie",
         "correct": false
       }
     ]
@@ -4633,33 +4660,6 @@
       },
       {
         "text": "1 ngư dân",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Ecopark ra mắt không gian sống “Live - Work - Play” đầu tiên tại Nghệ An",
-    "content": "Ecopark đã ra mắt không gian sống đầu tiên theo mô hình \"Live - Work - Play\" tại Nghệ An, nằm trong phân khu Central Bay của Eco Central Park. Mô hình này nhằm tạo ra một cộng đồng sống tích hợp, nơi cư dân có thể làm việc, giải trí và sinh hoạt trong bán kính gần nhau, giúp tiết kiệm thời gian di chuyển. Central Bay được thiết kế với nhiều tiện ích như khu thể thao, trường học và không gian xanh, hứa hẹn mang đến môi trường sống chất lượng cao cho cư dân.",
-    "link": "https://tuoitre.vn/ecopark-ra-mat-khong-gian-song-live-work-play-dau-tien-tai-nghe-an-2025031908004273.htm",
-    "cat": "du-lich",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Central Bay ở Nghệ An thuộc mô hình sống nào?",
-    "answers": [
-      {
-        "text": "Live - Work - Play",
-        "correct": true
-      },
-      {
-        "text": "Chỉ làm việc",
-        "correct": false
-      },
-      {
-        "text": "Chỉ giải trí",
-        "correct": false
-      },
-      {
-        "text": "Chỉ sống",
         "correct": false
       }
     ]
