--- a/home.html
+++ b/home.html
@@ -202,6 +202,33 @@
     ]
   },
   {
+    "title": "Tesla bị loại khỏi triển lãm ôtô vì lo ngại an toàn",
+    "content": "Tesla đã bị loại khỏi triển lãm ôtô quốc tế Vancouver do lo ngại về an toàn. Giám đốc điều hành của triển lãm, Eric Nicholl, cho biết quyết định này nhằm bảo vệ sự an toàn của tất cả người tham dự và nhân viên. Trong bối cảnh các cuộc biểu tình chống lại Tesla gia tăng ở Canada và Mỹ, ban tổ chức đã quyết định loại bỏ hãng xe điện này khỏi sự kiện, mặc dù Tesla đã được mời tự nguyện rút lui trước đó.",
+    "link": "https://vnexpress.net/tesla-bi-loai-khoi-trien-lam-oto-vi-lo-ngai-an-toan-4863532.html",
+    "cat": "oto-xe-may",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao Tesla bị loại khỏi triển lãm ôtô quốc tế Vancouver?",
+    "answers": [
+      {
+        "text": "Vì lo ngại về an toàn",
+        "correct": true
+      },
+      {
+        "text": "Do vấn đề tài chính",
+        "correct": false
+      },
+      {
+        "text": "Vì xe không đạt tiêu chuẩn",
+        "correct": false
+      },
+      {
+        "text": "Do sự phản đối từ các hãng khác",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đặc nhiệm Anh nhận lệnh sẵn sàng triển khai sang Ukraine?",
     "content": "Lực lượng Đặc nhiệm Anh được cho là đã nhận lệnh chuẩn bị để sẵn sàng triển khai đến Ukraine nhằm thực hiện sứ mệnh gìn giữ hòa bình. Thủ tướng Anh Keir Starmer đã kêu gọi triển khai quân đến Ukraine để hỗ trợ thỏa thuận hòa bình. Mặc dù Bộ Quốc phòng Anh từ chối bình luận về thông tin này, nhưng các nguồn tin quân sự cho biết rằng kế hoạch đã được chỉ thị từ Trụ sở Liên hợp Thường trực (PJHQ). Có khoảng 10 quốc gia đang thảo luận về việc gửi lực lượng gìn giữ hòa bình tới Ukraine, trong khi Nga đã phản đối sự hiện diện của lực lượng phương Tây tại đây.",
     "link": "https://dantri.com.vn/the-gioi/dac-nhiem-anh-nhan-lenh-san-sang-trien-khai-sang-ukraine-20250320084244769.htm",
@@ -2289,95 +2316,6 @@
     ]
   },
   {
-    "title": "Ăn uống, sinh hoạt thế nào khi còn một quả thận?",
-    "content": "Bài viết cung cấp thông tin về cách sinh hoạt và chế độ ăn uống cho người còn một quả thận. Sau phẫu thuật cắt thận, người bệnh cần chú ý bảo vệ sức khỏe, tránh các môn thể thao va chạm và áp dụng chế độ dinh dưỡng lành mạnh, cân bằng, giảm muối và hạn chế thực phẩm chứa kali, phốt pho. Đồng thời, cần theo dõi sức khỏe định kỳ và thận trọng khi sử dụng thuốc không kê đơn.",
-    "link": "https://vnexpress.net/an-uong-sinh-hoat-the-nao-khi-con-mot-qua-than-4863313.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Cần lưu ý gì khi sinh hoạt và ăn uống cho người còn một quả thận?",
-    "answers": [
-      {
-        "text": "Cần tránh thực phẩm chứa nhiều kali và phốt pho.",
-        "correct": true
-      },
-      {
-        "text": "Có thể ăn thoải mái các loại thực phẩm chế biến sẵn.",
-        "correct": false
-      },
-      {
-        "text": "Nên tập các môn thể thao va chạm như bóng đá.",
-        "correct": false
-      },
-      {
-        "text": "Không cần kiểm tra sức khỏe định kỳ.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "5 đồ uống góp phần tăng cường sinh lý nữ",
-    "content": "Bài viết giới thiệu 5 loại đồ uống có lợi giúp tăng cường sinh lý nữ, bao gồm trà xanh, sinh tố chuối, cà phê đen, rượu vang đỏ và nước ép lựu. Những đồ uống này chứa nhiều chất chống oxy hóa và vitamin, hỗ trợ cải thiện sức khỏe sinh lý và ổn định nội tiết tố. Bên cạnh việc sử dụng các loại đồ uống này, lối sống lành mạnh như tập thể dục và chế độ ăn uống cân bằng cũng rất quan trọng để nâng cao sức khỏe tổng thể của phụ nữ.",
-    "link": "https://vnexpress.net/5-do-uong-gop-phan-tang-cuong-sinh-ly-nu-4863206.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những loại đồ uống nào có thể giúp tăng cường sinh lý nữ?",
-    "answers": [
-      {
-        "text": "Trà xanh, sinh tố chuối, cà phê đen, rượu vang đỏ, nước ép lựu",
-        "correct": true
-      },
-      {
-        "text": "Nước ngọt có ga",
-        "correct": false
-      },
-      {
-        "text": "Trà sữa",
-        "correct": false
-      },
-      {
-        "text": "Sữa đặc có đường",
-        "correct": false
-      },
-      {
-        "text": "Nước lọc",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Dấu hiệu nhận biết bệnh xơ phổi",
-    "content": "Bệnh xơ phổi là một tình trạng mạn tính với triệu chứng chính là khó thở, thường tiến triển nặng dần theo thời gian. Người bệnh có thể gặp phải các triệu chứng như ho khan kéo dài, mệt mỏi dù đã nghỉ ngơi, và giảm cân không rõ nguyên nhân. Việc phát hiện sớm và điều trị kịp thời rất quan trọng, vì bệnh có thể dẫn đến tử vong nếu không được chăm sóc đúng cách. Những biện pháp như duy trì lối sống lành mạnh, tuân thủ điều trị và khám sức khỏe định kỳ có thể giúp cải thiện chất lượng sống cho người bệnh xơ phổi.",
-    "link": "https://vnexpress.net/dau-hieu-nhan-biet-benh-xo-phoi-4863292.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Bệnh xơ phổi có những triệu chứng nào cần chú ý?",
-    "answers": [
-      {
-        "text": "Khó thở và ho khan kéo dài",
-        "correct": true
-      },
-      {
-        "text": "Đau đầu và chóng mặt",
-        "correct": false
-      },
-      {
-        "text": "Nôn mửa và tiêu chảy",
-        "correct": false
-      },
-      {
-        "text": "Mệt mỏi và sốt cao",
-        "correct": false
-      },
-      {
-        "text": "Đau bụng và khó tiêu",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "\"Mỹ nam không tuổi\" Lee Jun Ki phản hồi thông tin trốn thuế",
     "content": "Ngày 19/3, Lee Jun Ki phản hồi thông tin bị Cục thuế Quốc gia Hàn Quốc truy thu 900 triệu won (15,8 tỷ đồng) vì nghi vấn trốn thuế. Nam diễn viên khẳng định đã kê khai thu nhập minh bạch và nộp đơn khiếu nại, đồng thời cho biết đã thanh toán toàn bộ số tiền truy thu. Lee Jun Ki cho rằng quyết định của cơ quan thuế không đúng với thông lệ và đã thực hiện nghĩa vụ thuế theo tư vấn từ chuyên gia. Ngoài ra, tài sản bất động sản của anh cũng được chú ý trong bối cảnh này.",
     "link": "https://dantri.com.vn/giai-tri/my-nam-khong-tuoi-lee-jun-ki-phan-hoi-thong-tin-tron-thue-20250319123742102.htm",
@@ -2454,6 +2392,95 @@
       },
       {
         "text": "Không cần phải có sự hỗ trợ từ người khác.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "5 đồ uống góp phần tăng cường sinh lý nữ",
+    "content": "Bài viết giới thiệu 5 loại đồ uống có lợi giúp tăng cường sinh lý nữ, bao gồm trà xanh, sinh tố chuối, cà phê đen, rượu vang đỏ và nước ép lựu. Những đồ uống này chứa nhiều chất chống oxy hóa và vitamin, hỗ trợ cải thiện sức khỏe sinh lý và ổn định nội tiết tố. Bên cạnh việc sử dụng các loại đồ uống này, lối sống lành mạnh như tập thể dục và chế độ ăn uống cân bằng cũng rất quan trọng để nâng cao sức khỏe tổng thể của phụ nữ.",
+    "link": "https://vnexpress.net/5-do-uong-gop-phan-tang-cuong-sinh-ly-nu-4863206.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những loại đồ uống nào có thể giúp tăng cường sinh lý nữ?",
+    "answers": [
+      {
+        "text": "Trà xanh, sinh tố chuối, cà phê đen, rượu vang đỏ, nước ép lựu",
+        "correct": true
+      },
+      {
+        "text": "Nước ngọt có ga",
+        "correct": false
+      },
+      {
+        "text": "Trà sữa",
+        "correct": false
+      },
+      {
+        "text": "Sữa đặc có đường",
+        "correct": false
+      },
+      {
+        "text": "Nước lọc",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Dấu hiệu nhận biết bệnh xơ phổi",
+    "content": "Bệnh xơ phổi là một tình trạng mạn tính với triệu chứng chính là khó thở, thường tiến triển nặng dần theo thời gian. Người bệnh có thể gặp phải các triệu chứng như ho khan kéo dài, mệt mỏi dù đã nghỉ ngơi, và giảm cân không rõ nguyên nhân. Việc phát hiện sớm và điều trị kịp thời rất quan trọng, vì bệnh có thể dẫn đến tử vong nếu không được chăm sóc đúng cách. Những biện pháp như duy trì lối sống lành mạnh, tuân thủ điều trị và khám sức khỏe định kỳ có thể giúp cải thiện chất lượng sống cho người bệnh xơ phổi.",
+    "link": "https://vnexpress.net/dau-hieu-nhan-biet-benh-xo-phoi-4863292.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Bệnh xơ phổi có những triệu chứng nào cần chú ý?",
+    "answers": [
+      {
+        "text": "Khó thở và ho khan kéo dài",
+        "correct": true
+      },
+      {
+        "text": "Đau đầu và chóng mặt",
+        "correct": false
+      },
+      {
+        "text": "Nôn mửa và tiêu chảy",
+        "correct": false
+      },
+      {
+        "text": "Mệt mỏi và sốt cao",
+        "correct": false
+      },
+      {
+        "text": "Đau bụng và khó tiêu",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Ăn uống, sinh hoạt thế nào khi còn một quả thận?",
+    "content": "Bài viết cung cấp thông tin về cách sinh hoạt và chế độ ăn uống cho người còn một quả thận. Sau phẫu thuật cắt thận, người bệnh cần chú ý bảo vệ sức khỏe, tránh các môn thể thao va chạm và áp dụng chế độ dinh dưỡng lành mạnh, cân bằng, giảm muối và hạn chế thực phẩm chứa kali, phốt pho. Đồng thời, cần theo dõi sức khỏe định kỳ và thận trọng khi sử dụng thuốc không kê đơn.",
+    "link": "https://vnexpress.net/an-uong-sinh-hoat-the-nao-khi-con-mot-qua-than-4863313.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Cần lưu ý gì khi sinh hoạt và ăn uống cho người còn một quả thận?",
+    "answers": [
+      {
+        "text": "Cần tránh thực phẩm chứa nhiều kali và phốt pho.",
+        "correct": true
+      },
+      {
+        "text": "Có thể ăn thoải mái các loại thực phẩm chế biến sẵn.",
+        "correct": false
+      },
+      {
+        "text": "Nên tập các môn thể thao va chạm như bóng đá.",
+        "correct": false
+      },
+      {
+        "text": "Không cần kiểm tra sức khỏe định kỳ.",
         "correct": false
       }
     ]
