Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -229,6 +229,64 @@
     ]
   },
   {
+    "title": "Điều trị hói đầu như thế nào?",
+    "content": "Bài viết cung cấp thông tin về các phương pháp điều trị hói đầu, bao gồm sử dụng thuốc uống, thuốc xịt, liệu pháp tiêm PRP và laser 4D. Thời gian điều trị có thể từ 2-12 tháng tùy thuộc vào nguyên nhân và phương pháp được chọn. Nếu các phương pháp không hiệu quả, cấy tóc có thể là lựa chọn cuối cùng. Để đạt được kết quả tốt nhất, người bệnh nên tham khảo ý kiến bác sĩ chuyên khoa và thực hiện chế độ chăm sóc tóc hợp lý.",
+    "link": "https://vnexpress.net/dieu-tri-hoi-dau-nhu-the-nao-4863306.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Điều trị hói đầu có những phương pháp nào?",
+    "answers": [
+      {
+        "text": "Sử dụng thuốc uống, thuốc xịt và PRP.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ cần thay đổi dầu gội.",
+        "correct": false
+      },
+      {
+        "text": "Thực hiện phẫu thuật ngay lập tức.",
+        "correct": false
+      },
+      {
+        "text": "Không cần điều trị gì cả.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hút thuốc lá 20 năm, tắc hẹp ba nhánh mạch máu tim",
+    "content": "Anh Trung, 44 tuổi, đã hút thuốc lá hơn 20 năm và gần đây được chẩn đoán mắc bệnh tắc hẹp ba nhánh mạch vành tim. Việc hút thuốc lá lâu dài đã dẫn đến sự hình thành mảng xơ vữa trong động mạch vành, gây nguy hiểm cho sức khỏe tim mạch của anh. Sau khi thực hiện can thiệp mạch vành, bác sĩ đã thành công trong việc khắc phục tình trạng tắc nghẽn, giúp anh hồi phục nhanh chóng. Các bác sĩ khuyến cáo rằng việc không hút thuốc và kiểm soát các yếu tố nguy cơ là rất quan trọng để phòng ngừa bệnh tim mạch.",
+    "link": "https://vnexpress.net/hut-thuoc-la-20-nam-tac-hep-ba-nhanh-mach-mau-tim-4863542.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 9,
+    "question": "Tại sao anh Trung bị tắc hẹp ba nhánh mạch máu tim?",
+    "answers": [
+      {
+        "text": "Do hút thuốc lá lâu năm",
+        "correct": true
+      },
+      {
+        "text": "Do ăn uống không lành mạnh",
+        "correct": false
+      },
+      {
+        "text": "Do thiếu vận động",
+        "correct": false
+      },
+      {
+        "text": "Do căng thẳng thường xuyên",
+        "correct": false
+      },
+      {
+        "text": "Do di truyền",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tesla bị loại khỏi triển lãm ôtô vì lo ngại an toàn",
     "content": "Tesla đã bị loại khỏi triển lãm ôtô quốc tế Vancouver do lo ngại về an toàn. Giám đốc điều hành của triển lãm, Eric Nicholl, cho biết quyết định này nhằm bảo vệ sự an toàn của tất cả người tham dự và nhân viên. Trong bối cảnh các cuộc biểu tình chống lại Tesla gia tăng ở Canada và Mỹ, ban tổ chức đã quyết định loại bỏ hãng xe điện này khỏi sự kiện, mặc dù Tesla đã được mời tự nguyện rút lui trước đó.",
     "link": "https://vnexpress.net/tesla-bi-loai-khoi-trien-lam-oto-vi-lo-ngai-an-toan-4863532.html",
@@ -1226,33 +1284,6 @@
     ]
   },
   {
-    "title": "Một ngày luyện trình diễn tiêm kích Su-30MK2",
-    "content": "Vào sáng 18/3, tại sân bay Biên Hoà, Đồng Nai, các phi công đã thực hiện buổi huấn luyện trình diễn cho tiêm kích Su-30MK2, chuẩn bị cho sự kiện vào ngày 30/4. Trong buổi tập, các phi công phải thực hiện các động tác bay phức tạp và kiểm tra kỹ lưỡng các thiết bị trước khi cất cánh. Su-30MK2 là máy bay chiến đấu hiện đại nhất của quân đội Việt Nam, được trang bị nhiều loại vũ khí và có khả năng bay với tốc độ cao. Buổi tập này là một phần trong kế hoạch chuẩn bị cho màn trình diễn lớn vào dịp lễ sắp tới.",
-    "link": "https://vnexpress.net/mot-ngay-luyen-trinh-dien-tiem-kich-su-30mk2-4863011.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Lý do nào khiến các phi công huấn luyện tiêm kích Su-30MK2 tại Đồng Nai?",
-    "answers": [
-      {
-        "text": "Chuẩn bị cho buổi trình diễn vào ngày 30/4",
-        "correct": true
-      },
-      {
-        "text": "Để kiểm tra kỹ thuật máy bay",
-        "correct": false
-      },
-      {
-        "text": "Để thực hiện các bài tập thể lực",
-        "correct": false
-      },
-      {
-        "text": "Để tham dự một cuộc thi quốc tế",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "5 người thoát chết khi ôtô lao xuống sông vì theo Google Maps",
     "content": "Một gia đình gồm 5 người đã thoát chết khi chiếc ôtô của họ lao xuống sông Gayathripuzha, Ấn Độ, do tuân theo hướng dẫn của Google Maps. Sự việc xảy ra vào lúc 19h30 ngày 16/3 khi họ đang trở về từ chuyến đi mua sắm. Mặc dù ôtô chìm hơn một nửa dưới nước, nhưng may mắn là tất cả các thành viên trong gia đình đều không bị thương. Tai nạn này đã làm dấy lên lo ngại về độ tin cậy của các ứng dụng định vị trong việc chỉ đường, đặc biệt ở những khu vực hạ tầng giao thông kém phát triển.",
     "link": "https://vnexpress.net/5-nguoi-thoat-chet-khi-oto-lao-xuong-song-vi-theo-google-maps-4863161.html",
@@ -1280,28 +1311,28 @@
     ]
   },
   {
-    "title": "Lỡ cơ hội làm cha vì 8 năm uống thuốc tăng sinh lực mua trên mạng",
-    "content": "Một người đàn ông ngoài 40 tuổi đã tự ý uống thuốc tăng cường sinh lý mua trên mạng trong suốt 8 năm mà không có hiệu quả trong việc điều trị vô sinh. Sau khi không có con trong 9 năm, anh và vợ quyết định đến bệnh viện kiểm tra và nhận thấy tình trạng vô tinh vẫn không thay đổi. Bác sĩ cho biết việc uống thuốc không rõ nguồn gốc đã làm họ bỏ lỡ cơ hội điều trị đúng cách và nhấn mạnh tầm quan trọng của việc tham khảo ý kiến bác sĩ trước khi sử dụng bất kỳ loại thuốc nào.",
-    "link": "https://vnexpress.net/lo-co-hoi-lam-cha-vi-8-nam-uong-thuoc-tang-sinh-luc-mua-tren-mang-4862846.html",
-    "cat": "suc-khoe",
-    "positivity": 2,
-    "importance": 8,
-    "question": "Tại sao người đàn ông này không có con sau 8 năm uống thuốc tăng cường sinh lý?",
+    "title": "Một ngày luyện trình diễn tiêm kích Su-30MK2",
+    "content": "Vào sáng 18/3, tại sân bay Biên Hoà, Đồng Nai, các phi công đã thực hiện buổi huấn luyện trình diễn cho tiêm kích Su-30MK2, chuẩn bị cho sự kiện vào ngày 30/4. Trong buổi tập, các phi công phải thực hiện các động tác bay phức tạp và kiểm tra kỹ lưỡng các thiết bị trước khi cất cánh. Su-30MK2 là máy bay chiến đấu hiện đại nhất của quân đội Việt Nam, được trang bị nhiều loại vũ khí và có khả năng bay với tốc độ cao. Buổi tập này là một phần trong kế hoạch chuẩn bị cho màn trình diễn lớn vào dịp lễ sắp tới.",
+    "link": "https://vnexpress.net/mot-ngay-luyen-trinh-dien-tiem-kich-su-30mk2-4863011.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Lý do nào khiến các phi công huấn luyện tiêm kích Su-30MK2 tại Đồng Nai?",
     "answers": [
       {
-        "text": "Vì anh uống thuốc không rõ nguồn gốc mà không có hiệu quả.",
+        "text": "Chuẩn bị cho buổi trình diễn vào ngày 30/4",
         "correct": true
       },
       {
-        "text": "Vì anh không đi khám bác sĩ.",
+        "text": "Để kiểm tra kỹ thuật máy bay",
         "correct": false
       },
       {
-        "text": "Vì vợ anh có vấn đề sức khỏe.",
+        "text": "Để thực hiện các bài tập thể lực",
         "correct": false
       },
       {
-        "text": "Vì họ không áp dụng kỹ thuật hỗ trợ sinh sản.",
+        "text": "Để tham dự một cuộc thi quốc tế",
         "correct": false
       }
     ]
